<resources>
    <string name="app_name">Assignment 1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login_text">Login</string>
    <string name="password">Password</string>
    <string name="radiobutton">Radio Button</string>
    <string name="checkbox">CheckBox</string>
    <string name="switch1">What does this do?</string>
    <string name="loginbtn">Login</string>
    <string name="dialogmsg">Finish Activity?</string>
    <string name="okbtn">Ok</string>
    <string name="cancelbtn">Cancel</string>
    <string name="messagePassed">Here is my response</string>
    <string name="goodEmail">Email Verified!</string>
    <string name="badEmail">Please enter a valid email address!</string>
    <string name="start_chat">Start Chat</string>
    <string name="sendbtn">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="pos_btn">Ok</string>
    <string name="neg_btn">Cancel</string>
    <string name="dialog_title">Do you want to go back?</string>
    <string name="new_message">New Message</string>
    <string name="test_toolbar_btn">Test Toolbar</string>
    <string name="item1selected">You selected item 1</string>




    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>